--- a/index.html
+++ b/index.html
@@ -3,25 +3,53 @@
 <head>
   <title> Sathvika Korandla </title>
   <link href="./stylesheet.css" type="text/css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Questrial&display=swap" rel="stylesheet">
 </head>
 
-<body>
-  <a id="top"></a>
+<body class="home">
+  <header>
+    <div class="nav-buttons">
+      <ul class="nav">
+        <li class="nav"><a class="nav" href="index.html">Home</a></li>
+        <li class="nav"><a class="nav" href="about.html">About</a></li>
+        <li class="nav"><a class="nav" href="fun.html"> Fun</a></li>
+        <li class="nav"><a class="nav" href="contact.html"> Contact</a></li>
+      </ul>
+    </div>
+    <h1>Sathvika Korandla</h1>
+  </header>
+  
+  
+
+  <div class="me">
+    <img src="images/sathvika.jpg" height ="400" class="imgcenter" align="left"/>
+    <h2 class="intro">
+      <br><br><center>
+        Hi, I'm Sathvi and welcome to my website!
+        I'm a '22 at Dartmouth College and I'm from Nashua, New Hampshire. At Dartmouth, I'm majoring in Computer Science, and I'd like to gain experience in software development. 
+        Some things I enjoy are music, movies, running and just living life!
+   </h2>
+  </div>
+
+
+
+  
+
+ 
+
+</body>
+
+
+</html>
+<!---
+<a id="top"></a>
   <div class="header">
     <h1>
       <center> S A T H V I K A &nbsp;&nbsp; K O R A N D L A </center>
     </h1>
   </div>
 
-  <div class="nav-buttons">
-    <ul class="nav">
-      <li class="nav"><a class="nav" href="#about">About</a></li>
-      <li class="nav"><a class="nav" href="#dali">Why DALI</a></li>
-      <li class="nav"><a class="nav" href="#activities"> Activities</a></li>
-      <li class="nav"><a class="nav" href="#fun">For Fun</a></li>
-      <li class="nav"><a class="nav" href="#contact">Contact</a></li>
-    </ul>
-  </div>
+  
 
   <div class="section" id="intro">
     <h2 class="about"> Hi, I'm Sathvi! </h2>
@@ -131,7 +159,4 @@
   <div class="footer">
     <a class="top" href="#top">Take me back to the top!</a>
   </div>
-
-</body>
-
-</html>
+-->
