fixed problems with css

--- a/index.html
+++ b/index.html
@@ -19,144 +19,15 @@
     <h1>Sathvika Korandla</h1>
   </header>
   
-  
-
   <div class="me">
     <img src="images/sathvika.jpg" height ="400" class="imgcenter" align="left"/>
     <h2 class="intro">
       <br><br><center>
         Hi, I'm Sathvi and welcome to my website!
         I'm a '22 at Dartmouth College and I'm from Nashua, New Hampshire. At Dartmouth, I'm majoring in Computer Science, and I'd like to gain experience in software development. 
-        Some things I enjoy are music, movies, running and just living life!
+        Some things I enjoy are music, movies, running and just living life!</center>
    </h2>
   </div>
-
-
-
-  
-
- 
-
 </body>
-
-
 </html>
-<!---
-<a id="top"></a>
-  <div class="header">
-    <h1>
-      <center> S A T H V I K A &nbsp;&nbsp; K O R A N D L A </center>
-    </h1>
-  </div>
 
-  
-
-  <div class="section" id="intro">
-    <h2 class="about"> Hi, I'm Sathvi! </h2>
-    <p class="about">I'm a '22 at Dartmouth College from Nashua, New Hampshire majoring in Computer Science! </p>
-    <div id="image">
-      <img src="images/sathvika.jpg" height ="350" class="imgcenter" />
-    </div>
-  </div>
-
-  <div class="section" id="about">
-    <h3> More About Me </h3>
-    <p>I first started learning Python and Java programming for fun through Codecademy the summer after 10th grade. I was curious to learn what this whole coding thing was,
-      especially since some of my friends kept talking about it! Then, I took AP Computer Science A during senior year and this class helped build up my programming skills.
-      At Dartmouth, I took CS 1 and CS 10 my freshman year, and they helped solidify my interest in computer science. Last term I took CS 50, and I'm currently taking CS 30. Though CS 30 is a whole
-      new beast, I'm learning so much and really enjoying it! </p>
-    <p>Over the past few years, I've picked up programming and development skills here and there. These are some programming languages and tools that I have experience with! </p>
-    <br style = line-height:1;>
-    <ul class="exp" >
-      <li class="exp">Python</li>
-      <li class="exp">Java</li>
-      <li class="exp">Ruby</li>
-      <li class="exp">C</li>
-      <li class="exp">React</li>
-      <li class="exp">Github</li>
-      <li class="exp">Mathematica</li>
-      <li class="exp">Bash/Unix shell programming</li>
-      <li class="exp">Atom</li>
-      <li class="exp">Pycharm, Eclipse, Netbeans</li>
-    </ul>
-  </div>
-
-  <div class="section" id="dali">
-    <h3> Why DALI </h3>
-    <p>I would love the opportunity to work at DALI because I've realized that the aspect of software engineering that I love most is the endless opportunities it holds!
-      The ability to make tools that benefit others and create solutions to problems by applying problem solving skills through coding is exciting!</p>
-    <p>I also really want to learn more about software development and learn how to use more languages and tools. I've really enjoyed all that I've learned
-      in CS classes here at Dartmouth, and I'm looking forward to learning more! I truly think that working in DALI's collaborative environment would enable me
-      to learn more about programming and allow me to learn from my peers.</p>
-    <p>Additionally, I'm really interested in the process that goes behind designing and programming applications. I'm looking forward to learn more about
-      the planning and designing process behind creating a product with an end goal in mind.</p>
-  </div>
-
-  <div class="section" id="activities">
-    <h3> What I Do </h3>
-    <p> At Dartmouth, I'm a TA for CS 1, a member of Women in Computer Science, an interviewer for the Humans of Dartmouth Project, and an arts writer for The Dartmouth.
-      I've also done research in the application of natural language processing on clinical data through the Women in Science Project (WISP).
-    </p>
-    <p> In my free time, I enjoy being outdoors. You can find me running, hiking, ice skating, "doing homework on the green", and napping on hammocks with friends. I
-      also love trying new outdoorsy things, and I'm currently learning how to cross country ski (yup, even though I'm from New Hampshire, I don't know how to ski)! </p>
-    <figure>
-      <img src="images/hammock.jpg" height="300" width="300" class="imgcenter">
-      <figcaption>Hammockin' with friends from home</figcaption>
-    </figure>
-    <figure>
-      <img src="images/views.jpg" height="300" width="400" class="imgcenter">
-      <figcaption>One of my favorite running trails at home</figcaption>
-    </figure>
-    <p> My favorite way to unwind after a long day is to watch an episode or two of a TV show! I'm currently watching Brooklyn 99.
-      Hit me up with some TV show recommendations! </p>
-    <p>I also listen to a copious amount of music!! My favorite artist at the moment is Maggie Rogers and my favorite genre of music is indie-pop/indie-rock.
-      I'll listen to music from most other genres depending on my mood. I CANNOT stand heavy metal/screamo, but I tolerate country! </p>
-  </div>
-
-  <div class="section" id="fun">
-    <h3>Fun Facts and Things I Love!</h3>
-    <p>My favorite color is blue and I own 23 pieces of blue clothing. :) </p>
-    <p> I was born in Massachusetts and moved to New Hampshire when I was 2, so I've lived in New England my whole life! </p>
-    <p> As I previously mentioned, I love listening to music and I could not live without it. My love for music stems from my childhood,
-      because I learned to play the piano starting when I was 7. In high school, I really wanted to learn how to play the guitar so I taught myself!
-      I'm also a singer, as I grew up training in Indian classical music. Nowadays, I mostly sing in the shower and hum all the songs stuck in my head
-      while walking around campus.</p>
-    <p> I've recently become obsessed with TikTok and even though I can't really dance, I can't stop renegading...one of my goals is to become TikTok famous :P </p>
-    <p>Another fun fact about me is that I love traveling! I enjoy exploring new places and learning more about their history. I would love
-      to spend an entire year just traveling around the world! Some of the places I've been to recently are: </p>
-       <h4>India</h4>
-       <figure>
-         <img src="images/tajmahal.jpg" height="300" class="imgcenter">
-         <figcaption>Me trying my best at the Taj Mahal</figcaption>
-       </figure>
-       <br style = line-height:1;>
-       <h4>Yellowstone National Park</h4>
-       <figure>
-         <img src="images/yellowstone.jpg" height="300" width="400" class="imgcenter">
-         <figcaption>Cheesin' real hard in Yellowstone</figcaption>
-       </figure>
-       <br style = line-height:1;>
-       <h4>Grand Canyon National Park</h4>
-       <figure>
-         <img src="images/canyon.jpg" height="300" width="400" class="imgcenter">
-         <figcaption>A GRAND view indeed</figcaption>
-       </figure>
-       <br style = line-height:1;>
-       <h4>The top of Gile</h4>
-       <figure>
-         <img src="images/me.jpg" height="300" width="400" class="imgcenter">
-         <figcaption>Such a classic Dartmouth activity</figcaption>
-       </figure>
-  </div>
-
-  <div class="section" id="contact">
-    <br style = line-height:1;>
-    <h3> Get in Touch With Me </h3>
-    <p class="txtcenter"> Email: sathvika.r.korandla.22@dartmouth.edu</p>
-    <p class="txtcenter"> Phone: (603)-320-3528 </p>
-  </div>
-
-  <div class="footer">
-    <a class="top" href="#top">Take me back to the top!</a>
-  </div>
--->
