--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <title> Sathvika Korandla </title>
   <link href="./stylesheet.css" type="text/css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Questrial&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Questrial&display=swap" rel="stylesheet">
 </head>
 
 <body class="about">
