added some javascript

--- a/about.html
+++ b/about.html
@@ -58,13 +58,11 @@
               <li class="exp">C</li>
               <li class="exp">SQL</li>
               <li class="exp">React</li>
+              <li class="exp">CSS</li>
+              <li class="exp">HTML</li>
               <li class="exp">Github</li>
               <li class="exp">Mathematica</li>
               <li class="exp">Bash/Unix shell programming</li>
-              <li class="exp">Atom</li>
-              <li class="exp">Pycharm</li>
-              <li class="exp">Eclipse</li>
-              <li class="exp">Netbeans</li>
             </ul>
           </div>
         
@@ -77,8 +75,8 @@
   <p class="whydali">I would love the opportunity to work at DALI because I'd like to gain more skills in software development. I love that software engineering 
     holds endless opportunities it holds, and the ability to make tools that benefit others excites me! I'd like to learn how to use more software tools 
     and programming languages, as I've really enjoyed all that I've learned in CS classes here at Dartmouth. I truly think that working in DALI's 
-    collaborative environment would enable me to learn more through working alongside my peers. Additionally, I'm really interested in the process that goes 
-    into the planning and designing process when creating a product, and working in DALI offers a unique opportunity to do just that.</p>     
+    collaborative environment would enable me to learn more through working alongside my peers. Additionally, I'm really interested in the process behind 
+    planning and designing a product, and working in DALI offers a unique opportunity to learn more about this.</p>     
   </div>
 </body>
 </html>
