--- a/contact.html
+++ b/contact.html
@@ -18,16 +18,16 @@
     </div>
     <h1>Sathvika Korandla</h1>
   </header>
-  
+  <br><br><br><br>
   <h2> <center>Get in touch with me!</center> </h2>
+  <br>
   <p><center>Connect with me on LinkedIn at: <a href="https://www.linkedin.com/in/sathvika-korandla/">sathvika-korandla</a></center></p>
   <p><center>Find me on GitHub at: <a href="https://github.com/sathvi-k">sathvi-k</a></center></p>
   <p><center>Email me at: sathvika.r.korandla.22@dartmouth.edu</center></p>
   <p><center>Send me a text at: 603-320-3528</center></p>
-
-  <img src="images/tajmahal.jpg" height="300" class="imgcenter">
-  <figcaption>Here's a fun picture of me at the Taj Mahal in India, as you can tell, this picture was not a success, but I tried my best</figcaption>
-  <h2><center>Thank you for visiting my website! Hope you enjoyed learning more about me!</center></h2>
+  <br>
+  <h2><center>Thank you for visiting my website!</center></h2>
+  <h2><center>Hope you enjoyed learning more about me!</center></h2>
 
 
 </body>
